--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -33,7 +33,27 @@ LARGER TABLETS/IPADS IN PORTRAIT MODE FROM 767PX-1023PX
 		margin-left: 10%;
 		/*line-height stays the ssame, 10+10+80 = 100%*/
 	}
-	
+	.steps-box {margin-top: 10px;}
+	.steps-box:last-child {margin-top: 10px;}
+		/*removing white space between the steps numbers*/
+	.works-step {margin-bottom: 40px;}
+	.works-step:last-of-type {margin-bottom: 40px;}
+	.app-screen{width:50%;}
+
+	.icon-small {
+		/*smaller icons, less spacing*/
+		width: 17px;
+		margin-right: 10px;
+	}
+	.city-feature { font-size: 90%;}
+	/*changing plans boxes width margin, reduce font-sizes*/
+	.plan-box{
+	width: 100%;
+	margin-left: 0%;
+	}
+	.plan-price{font-size: 250%;}
+	.contact-form{width:80%;}
+
 }
 
 /*===========================================
@@ -42,7 +62,33 @@ LARGER PHONES/SMALL TABLETS FROM 481 - 767PX
 
 
 @media only screen and (max-width: 767px) {
-	/*IPHONE MOBILE MEDIA*/
+	body {font-size: 16px;}
+	section {padding: 30px 0;}
+	.row,.hero-text-box { padding: 0 4%;}
+	.col{width: 100%;} /*columns will be stacked not side by side*/
+	.main-nav { display: none;} /*hides navigation*/
+	.long-copy {
+	width: 100%;
+	margin-left: 0%;
+	}
+	h2{font-size: 150%;}
+	h1{font-size: 180%;}
+	.works-step {margin-bottom: 20px;}
+	.works-step:last-of-type {margin-bottom: 20px;}
+	.steps-box:first-child {text-align: center;}
+	.app-screen{width: 40%;}
+
+	.works-step div {
+	height: 40px;
+	width: 40px;
+	margin-right: 15px;
+	padding: 4px;
+	font-size: 120%;
+	}	
+	.col{
+		width: 100%;
+		margin: 0 0 4% 0;
+	}
 }
 
 /*===========================================
@@ -52,6 +98,10 @@ SMALL PHONES FROM 0-480PX
 
 @media only screen and (max-width: 480px) {
 	/*IPHONE MOBILE MEDIA*/
+
+	section{ padding: 25px 0;}
+	/*no more padding in the sections*/
+	.contact-form{width: 100%}
 }
 
 
