--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -244,7 +244,16 @@ header{
 	margin-top: 20px;
 }
 
+.logo-black { 
+	display: none;
+	height: 50px;
+	width: auto; /*determined automatically*/
+	float: left; 
+	margin: 5px 0; /*changes logo margin-top from the sticky nav*/
+	
+}
 
+/*MAIN NAVI*/
 .main-nav{
 	float: right;
 	list-style: none;
@@ -270,6 +279,28 @@ header{
 .main-nav li a:hover {
 	border-bottom: 2px solid #e67e22; /*orange color on highlight of nav buttons*/
 }
+
+/*STICKY NAV*/
+
+.sticky {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: rgba(255,255,255,0.98);
+	box-shadow: 0 2px 2px #efefef;
+}
+.main-nav{margin-top: 18px;} /*decrease top-margin of the sticky nav*/
+
+
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{ 
+	padding: 16px 0; 
+	color: #555;
+}
+.sticky .logo { display: none;}
+.sticky .logo-black { display: block;}
 
 /*===========================================
 Features
